# golem-ai

./: .env  .gitignore  Cargo.toml  Cargo.toml.bak  Makefile.toml  README.md  TEST_RESULTS_REPORT.md  demo.cast  exec-javascript.wasm  exec-python.wasm  issue-21.md  plan.md  publish-0.5.0.sh
embed/embed/: Cargo.toml
embed/embed/src/: config.rs  durability.rs  error.rs  lib.rs  model.rs
embed/openai/: Cargo.toml
embed/openai/src/: bindings.rs  client.rs  config.rs  conversions.rs  lib.rs
exec/: Cargo.toml  Makefile.toml  README.md  WASM_TEST_REPORT.md  javascript_executor_generator.py  rust_installer.py
exec/exec/: Cargo.toml
exec/exec-javascript/: Cargo.toml
exec/exec-javascript/src/: bindings.rs  lib.rs  types.rs
exec/exec-javascript/wit/: exec-javascript.wit
exec/exec-python/: Cargo.toml
exec/exec-python/src/: bindings.rs  lib.rs  types.rs
exec/exec-python/wit/: exec-python.wit
exec/exec-unified/: Cargo.toml
exec/exec-unified/src/: lib.rs
exec/exec/src/: bindings.rs  component.rs  config.rs  config_test.rs  durability.rs  encoding.rs  error.rs  executor.rs  lib.rs  limits.rs  model.rs  stream.rs  types.rs
exec/exec/src/javascript/: mod.rs
exec/exec/src/python/: mod.rs
exec/exec/src/runtime/: common.rs  javascript.rs  mod.rs  python.rs
exec/integration_tests/: Cargo.toml
exec/integration_tests/src/: lib.rs
exec/shared/: Cargo.toml
exec/shared/src/: lib.rs
exec/tests/: config_tests.rs  integration_tests.rs  wit_compliance_test.rs
exec/wit/: golem-exec.wit
golem-exec/exec-javascript/: Cargo.toml
golem-exec/exec-javascript/src/: lib.rs
golem-exec/exec-python/: Cargo.toml
golem-exec/exec-python/src/: bindings.rs  lib.rs
golem-exec/exec-python/wit/: golem-exec.wit
graph/graph/: Cargo.toml
graph/graph/src/: config.rs  durability.rs  error.rs  lib.rs  model.rs  query_utils.rs  types.rs
graph/janusgraph/: Cargo.toml
graph/janusgraph/src/: bindings.rs  client.rs  config.rs  connection.rs  conversion.rs  conversions.rs  helpers.rs  lib.rs  query.rs  query_utils.rs  schema.rs  transaction.rs  traversal.rs
graph/janusgraph/wit/: janusgraph.wit
graph/neo4j/: Cargo.toml
graph/neo4j/src/: bindings.rs  client.rs  config.rs  connection.rs  conversion.rs  conversions.rs  helpers.rs  lib.rs  schema.rs  transaction.rs
llm/anthropic/: Cargo.toml
llm/anthropic/src/: client.rs  config.rs  conversions.rs  lib.rs
llm/llm/: Cargo.toml
llm/llm/src/: chat_stream.rs  config.rs  durability.rs  error.rs  lib.rs  model.rs  wasi_compat.rs
llm/llm/src/event_source/: aws_eventstream.rs  error.rs  event_stream.rs  mod.rs  stream.rs  (+2 more)
llm/ollama/: Cargo.toml
llm/ollama/src/: client.rs  config.rs  conversions.rs  lib.rs
llm/openai/: Cargo.toml
llm/openai/src/: client.rs  config.rs  conversions.rs  lib.rs
search/elasticsearch/: Cargo.toml
search/elasticsearch/src/: client.rs  config.rs  conversions.rs  lib.rs
search/meilisearch/: Cargo.toml
search/meilisearch/src/: client.rs  config.rs  conversions.rs  lib.rs
search/search/: Cargo.toml
search/search/src/: bindings.rs  config.rs  durability.rs  error.rs  lib.rs  model.rs  wasi_compat.rs
search/typesense/: Cargo.toml
search/typesense/src/: client.rs  config.rs  conversions.rs  lib.rs
stt/amazon/: Cargo.toml
stt/amazon/src/: batch.rs  bindings.rs  config.rs  durability.rs  error.rs  languages.rs  lib.rs  signer.rs  transcribe.rs  vocabularies.rs
stt/amazon/wit/: amazon.wit  deps.toml
stt/aws/: Cargo.toml  README.md
stt/aws/src/: bindings.rs  client.rs  component.rs  config.rs  conversions.rs  lib.rs  mapping.rs  sigv4.rs  stream.rs
stt/aws/wit/: aws.wit  deps.toml
stt/azure/: Cargo.toml  README.md
stt/azure/src/: batch.rs  bindings.rs  client.rs  component.rs  config.rs  conversions.rs  durability.rs  error.rs  languages.rs  lib.rs  recognize.rs  stream.rs  transcription.rs  vocabularies.rs
stt/azure/tests/: confidence_integration.rs  config_load.rs  diarization_integration.rs  error_map.rs  formats_integration.rs  long_integration.rs  multi.rs  rate_quota_integration.rs  silence_integration.rs  transcription_integration.rs  vocab_integration.rs
stt/azure/wit/: azure.wit
stt/deepgram/: Cargo.toml  README.md
stt/deepgram/src/: batch.rs  bindings.rs  client.rs  component.rs  config.rs  conversions.rs  durability.rs  error.rs  languages.rs  lib.rs  recognize.rs  stream.rs  transcription.rs  vocabularies.rs
stt/deepgram/tests/: diarization_integration.rs  formats_integration.rs  keywords_integration.rs  metadata_integration.rs  multitranscribe_integration.rs  transcription_integration.rs
stt/deepgram/wit/: deepgram.wit  deps.toml
stt/google/: Cargo.toml  README.md
stt/google/src/: auth.rs  batch.rs  bindings.rs  client.rs  component.rs  config.rs  constants.rs  conversions.rs  durability.rs  error.rs  languages.rs  lib.rs  mapping.rs  recognize.rs  stream.rs  vocabularies.rs
stt/google/tests/: buffer_limit.rs  confidence_integration.rs  config_load.rs  diarization_integration.rs  error_map.rs  formats_integration.rs  gateway_mock.rs  jwt_builder.rs  metadata_integration.rs  multi.rs  rate_quota_integration.rs  silence_long_integration.rs  stream_basic.rs  stream_durable.rs
stt/google/wit/: google.wit
stt/stt/: Cargo.toml
stt/stt/src/: bindings.rs  component.rs  config.rs  durability.rs  error.rs  errors.rs  guest.rs  http.rs  lib.rs  mapping.rs  model.rs  stream.rs  types.rs
stt/stt/wit/: golem-stt.wit  stt.wit
stt/whisper/: Cargo.toml  README.md
stt/whisper/src/: batch.rs  bindings.rs  client.rs  component.rs  config.rs  conversions.rs  error.rs  languages.rs  lib.rs  mapping.rs  recognize.rs  transcription.rs  vocabularies.rs
stt/whisper/tests/: basic_integration.rs
stt/whisper/wit/: deps.toml  whisper.wit
test/vector/: Cargo.toml  golem.yaml
test/vector/common-rust/: golem.yaml
test/video-advanced/: Cargo.toml  README.md  golem.yaml  test-advanced.md  test-video-advanced.md
test/video-advanced/common-rust/: golem.yaml
tts/aws/: Cargo.toml
tts/aws/src/: aws_signer.rs  client.rs  config.rs  conversions.rs  lib.rs
(+495 files in other folders)
