[workspace]
resolver = "2"

members = [
    "llm/llm",
    "llm/anthropic",
    "llm/grok",
    "llm/ollama",
    "llm/openai",
    "llm/openrouter",
    "exec/exec",
    "exec/exec-javascript",
    "exec/exec-python",
]

[profile.release]
debug = false
lto = true
opt-level = 's'

[workspace.dependencies]
golem-rust = "1.6.0"
log = "0.4.27"
golem-llm = { path = "llm/llm", version = "0.0.0", default-features = false }
reqwest = { git = "https://github.com/golemcloud/reqwest", branch = "update-may-2025", features = [
    "json",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
wit-bindgen-rt = { version = "0.40.0", features = ["bitflags"] }
wit-bindgen = { version = "0.40.0" }
base64 = { version = "0.22.1" }
tempfile = { version = "3.8.1" }
thiserror = { version = "2.0.12" }
env_logger = { version = "0.11" }
wasi-logger = { version = "0.1.2" }
futures = { version = "0.3" }
tokio = { version = "1.35.1", features = ["sync", "macros", "io-util", "rt", "time"] }
