[workspace]
resolver = "2"

members = [
    "llm/llm",
    "llm/bedrock",
    "llm/anthropic",
    "llm/grok",
    "llm/ollama",
    "llm/openai",
    "llm/openrouter",
    "embed/embed",
    "embed/cohere",
    "embed/hugging-face",
    "embed/openai",
    "embed/voyageai",
    "websearch/websearch",
    "websearch/brave",
    "websearch/google",
    "websearch/serper",
    "websearch/tavily",
    "search/search",
    "search/elasticsearch",
    "search/algolia",
    "search/meilisearch",
    "search/opensearch",
    "search/typesense",
    "graph/graph",
    "graph/arangodb",
    "graph/janusgraph",
    "graph/neo4j",
    "video/video",
    "video/kling",
    "video/runway",
    "video/veo",
    "video/stability",
    "exec/exec",
    "stt/stt",
    "stt/whisper",
    "stt/deepgram",
    "stt/aws",
    "stt/azure",
    "stt/google",
    "tts/tts",
    "tts/aws",
    "tts/deepgram",
    "tts/elevenlabs",
    "tts/google",
    "vector/vector",
    "vector/milvus",
    "vector/pgvector",
    "vector/pinecone",
    "vector/qdrant",
]

[profile.release]
debug = false
lto = true
opt-level = 's'

[workspace.dependencies]
golem-ai-llm = { path = "llm/llm", version = "0.0.0", default-features = false }
golem-ai-search = { path = "search/search", version = "0.0.0", default-features = false }
golem-ai-graph = { path = "graph/graph", version = "0.0.0", default-features = false }
golem-ai-video = { path = "video/video", version = "0.0.0", default-features = false }
golem-ai-stt = { path = "stt/stt", version = "0.0.0", default-features = false }
golem-ai-tts = { path = "tts/tts" , version = "0.0.0" , default-features= false}
golem-ai-vector = { path = "vector/vector", version = "0.0.0", default-features = false}
golem-ai-embed = { path = "embed/embed", version = "0.0.0", default-features = false}
futures = "0.3.31"
golem-rust = "=2.0.0-dev.1"
golem-wasi-http = { version = "0.1.0", features = ["json"] }
log = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
wasi = "=0.14.1+wasi-0.2.3"
wstd = "=0.5.4"
base64 = { version = "0.22.1" }
mime_guess = { version = "2.0.5" }
url = { version = "2.5.4" }
