[workspace]
members = [
    "exec",
    "exec-javascript",
    "exec-python",
]
resolver = "2"

[workspace.dependencies]
golem-rust = "1.6.0"
wit-bindgen-rt = { version = "0.43.0", features = ["bitflags"] }
wit-bindgen = { version = "0.43.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.27"
env_logger = "0.11"
wasi-logger = "0.1.2"
thiserror = "2.0.12"
futures = "0.3"
tokio = { version = "1.35.1", features = ["sync", "macros", "io-util", "rt", "time"] }
tempfile = "3.8.1"
base64 = "0.22.1"
once_cell = "1.19"
hex = "0.4"
which = "8.0.0"
uuid = { version = "1.0", features = ["v4"] }