[workspace]
members = [
    "exec-javascript",
    "exec-python",
    "exec-unified",
    "shared"
]
resolver = "2"

[workspace.dependencies]
wit-bindgen = "0.16"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[profile.release]
lto = true
opt-level = "s"
strip = true