[package]
name = "golem-embed-openai"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://golem.cloud"
repository = "https://github.com/golemcloud/golem-ai"
description = "Library for working with OpenAI embeding APIs on Golem Cloud"


[lib]
path = "src/lib.rs"

[features]
default = ["durability"]
durability = ["golem-rust/durability", "golem-embed/durability"]


[dependencies]
golem-embed = { path = "../embed", version = "0.0.0", default-features = false }
golem-rust = { workspace = true }
golem-wasi-http = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }

