[package]
name = "golem-ai-embed-openai"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://golem.cloud"
repository = "https://github.com/golemcloud/golem-ai"
description = "Library for working with OpenAI embeding APIs on Golem Cloud"


[lib]
path = "src/lib.rs"

[features]
default = ["golem"]
golem = ["dep:golem-rust", "golem-ai-embed/golem"]


[dependencies]
golem-ai-embed = { path = "../embed", version = "0.0.0", default-features = false }
golem-rust = { workspace = true, optional = true }
golem-wasi-http = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
