[package]
name = "golem-exec"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
exec-javascript = { path = "../exec-javascript" }
exec-python = { path = "../exec-python" }
wit-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
wasi-logger = { workspace = true, optional = true }
tempfile = { workspace = true }
which = "8.0.0"
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22"
hex = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["process"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true }

[features]
wasi-logging = ["wasi-logger"]
no-logging = []

[package.metadata.component]
package = "golem:exec"
target = { path = "../wit", world = "exec-library" }