[package]
name = "golem-ai-exec"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://golem.cloud"
repository = "https://github.com/golemcloud/golem-ai"
description = "Library for executing dynamic code snippets on Golem Cloud"

[lib]
path = "src/lib.rs"

[features]
default = ["javascript", "python", "durability"]
durability = ["golem-rust/durability"]
javascript = ["dep:rquickjs"]
python = ["dep:rustpython"]

[dependencies]
golem-rust = { workspace = true }

base64 = "0.22.1"
encoding_rs = "0.8.35"
futures = { workspace = true }
hex = "0.4.3"
indoc = "2.0.6"
log = { workspace = true }
rquickjs = { version = "0.9.0", default-features = false, features = ["futures", "bindgen", "loader", "macro"], optional = true }
rustpython = { git = "https://github.com/RustPython/RustPython", rev = "d79b41ba289844be0fe391bab5a083f6688af648", default-features = false, features = ["stdlib", "stdio", "importlib", "freeze-stdlib"], optional = true }
wasi = { workspace = true }
wasi-logger = "0.1.2"
wstd = { workspace = true }
