[package]
name = "exec-python"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://golem.cloud"
repository = "https://github.com/golemcloud/golem-llm"


[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
uuid = { version = "1.3", features = ["v4"] }
tempfile = "3.10"
base64 = "0.21"

golem-rust = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
serde.workspace = true
serde_json = { workspace = true }
wit-bindgen-rt = { workspace = true }
tokio = { version = "1.36", features = ["sync","io-util", "time", "macros", "rt"] }


#wasmtime = { git = "https://github.com/golemcloud/wasmtime.git", branch = "golem-wasmtime-v33.0.0", default-features = false, features = ["cranelift","std"] }
#wasmtime-wasi = { git = "https://github.com/golemcloud/wasmtime.git", branch = "golem-wasmtime-v33.0.0" }


[target.'cfg(not(target_family = "wasm"))'.dependencies]
wait-timeout = "0.2"

[package.metadata.component.target]
path = "wit"





