[package]
name = "golem-graph"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://golem.cloud"
repository = "https://github.com/golemcloud/golem-llm"
description = "WASM interface definition and traits for graph database operations used by Golem Cloud components"

[lib]
path = "src/lib.rs"
crate-type = ["rlib"] 

[features]
default = ["durability"]
durability = []

[dependencies]
wit-bindgen = { version = "0.40.0" }
golem-rust = { workspace = true }
golem-wasm-rpc = { version = "1.3.0-dev.19", default-features = false, features = ["stub"] }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
wasi-logger = "0.1.2"