[package]
name = "golem-graph-janusgraph"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://golem.cloud"
repository = "https://github.com/golemcloud/golem"
description = "WebAssembly component for JanusGraph graph operations via the golem:graph interface"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[features]
default = []

[dependencies]
golem-graph = { path = "../graph", version = "0.0.0", default-features = false }
golem-rust = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
wit-bindgen-rt = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
base64 = { workspace = true }
url = "2.5"
urlencoding = "2.1"
uuid = { version = "1.0", features = ["v4"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = true

[package.metadata.component]
package = "golem:graph-janusgraph"

[package.metadata.component.bindings]
#generate_unused_types = true

[package.metadata.component.bindings.with]
"golem:graph/connection@1.0.0" = "golem_graph::golem::graph::connection"
"golem:graph/types@1.0.0" = "golem_graph::golem::graph::types"
"golem:graph/errors@1.0.0" = "golem_graph::golem::graph::errors"
"golem:graph/transactions@1.0.0" = "golem_graph::golem::graph::transactions"
"golem:graph/schema@1.0.0" = "golem_graph::golem::graph::schema"
"golem:graph/query@1.0.0" = "golem_graph::golem::graph::query"
"golem:graph/traversal@1.0.0" = "golem_graph::golem::graph::traversal"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"golem:graph" = { path = "wit/deps/golem-graph" }
"wasi:io" = { path = "wit/deps/wasi:io" }
