[package]
name = "golem-ai-graph-janusgraph"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://golem.cloud"
repository = "https://github.com/golemcloud/golem-ai"
description = "Library for working with JanusGraph APIs on Golem Cloud"

[lib]
path = "src/lib.rs"

[features]
default = ["durability"]
durability = ["golem-rust/durability", "golem-ai-graph/durability"]

[dependencies]
golem-ai-graph = { workspace = true }

base64 = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
golem-rust = { workspace = true }
golem-wasi-http = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = "1.17.0"
