[package]
name = "golem-ai-llm"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://golem.cloud"
repository = "https://github.com/golemcloud/golem-ai"
description = "Library for working with LLM APIs on Golem Cloud"

[lib]
path = "src/lib.rs"

[dependencies]
golem-rust = { workspace = true }

golem-wasi-http = { workspace = true }
indoc = "2.0.6"
log = { workspace = true }
mime = "0.3.17"
nom = { version = "7.1", default-features = false }
thiserror = "2.0.12"
wasi-logger = "0.1.2"


[features]
default = ["durability"]
durability = ["golem-rust/durability"]
nopoll = []
