[package]
name = "golem-llm-ollama"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://golem.cloud"
repository = "https://github.com/golemcloud/golem-ai"
description = "Library for working with Ollama APIs on Golem Cloud"

[lib]
path = "src/lib.rs"


[features]
default = ["durability"]
durability = ["golem-rust/durability", "golem-llm/durability"]

[dependencies]
golem-llm = { workspace = true }
base64 = { workspace = true }
golem-wasi-http = { workspace = true }
mime_guess = { workspace = true }
url = { workspace = true }

golem-rust = { workspace = true }
log = { workspace = true }
serde.workspace = true
serde_json = { workspace = true }
indoc = "2.0.6"
