[package]
name = "golem-search-elasticsearch"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://golem.cloud"
repository = "https://github.com/golemcloud/golem-ai"
description = "Library for working with Elasticsearch APIs on Golem Cloud"

[lib]
path = "src/lib.rs"

[features]
default = ["durability"]
durability = ["golem-rust/durability", "golem-search/durability"]

[dependencies]
golem-search = { workspace = true }

base64 = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
golem-rust = { workspace = true }
golem-wasi-http = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
