[package]
name = "golem-ai-search"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://golem.cloud"
repository = "https://github.com/golemcloud/golem-ai"
description = "Library for working with search provider APIs on Golem Cloud"

[lib]
path = "src/lib.rs"

[dependencies]
golem-rust = { workspace = true, optional = true }
golem-wasi-http = { workspace = true }
log = { workspace = true }
mime = "0.3.17"
nom = { version = "7.1", default-features = false }
thiserror = "2.0.12"
wasi-logger = "0.1.2"
wasip2 = { workspace = true }


[features]
default = ["golem"]
golem = ["dep:golem-rust", "golem-rust/durability", "golem-rust/export_golem_agentic"]
