[package]
name = "golem-ai-stt-aws"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://golem.cloud"
repository = "https://github.com/golemcloud/golem-ai"
description = "Library for working with AWS Transcribe Speech to Text API on Golem Cloud"

[lib]
path = "src/lib.rs"

[features]
default = ["durability"]
durability = ["golem-rust/durability", "golem-ai-stt/durability"]

[dependencies]
golem-ai-stt = { workspace = true }

golem-rust = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wstd = { workspace = true }
derive_more = { version = "2.0.1", features = ["from"] }
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
http = "=1.3.1"
url = "2.5.4"
percent-encoding = "=2.3.1"
chrono = "0.4"
futures-concurrency = "7.6.3"
itertools = "0.14.0"
once_cell = "1.21.3"
bytes = "1.10.1"

[dev-dependencies]
aws-sigv4 = "1.2.6"
aws-config = { version = "1.5.10", features = ["behavior-version-latest"] }
aws-credential-types = "1.2.1"

