[package]
name = "golem-stt-google"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://golem.cloud"
repository = "https://github.com/golemcloud/golem-stt"
description = "WebAssembly component for working with Google Cloud Speech-to-Text, with special support for Golem Cloud"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = []
durability = ["golem-rust/durability", "golem-stt/durability"]
durability_integration = []
portable = []

[dependencies]
golem-stt = { workspace = true }

log = { workspace = true }
golem-rust = { workspace = true }
wit-bindgen-rt = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
[dependencies.once_cell]
version = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
jsonwebtoken = "9"

[dev-dependencies]
serial_test = "2"

[dependencies.uuid]
version = "1"
features = ["v4"]

[package.metadata.component]
package = "golem:stt-google"

[package.metadata.component.bindings]
generate_unused_types = true

[package.metadata.component.bindings.with]
"golem:stt/types@1.0.0" = "golem_stt::golem::stt::types"
"golem:stt/vocabularies@1.0.0" = "golem_stt::golem::stt::vocabularies"
"golem:stt/languages@1.0.0" = "golem_stt::golem::stt::languages"
"golem:stt/transcription@1.0.0" = "golem_stt::golem::stt::transcription"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"golem:stt" = { path = "wit/deps/golem-stt" } 