[package]
name = "stt-google"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://golem.cloud"
repository = "https://github.com/golemcloud/golem-llm"
description = "WebAssembly components for working with Google Cloud Speech-to-Text API, with special support for Golem Cloud"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
golem-stt = { path = "../stt", version = "0.0.0" }
base64 = { workspace = true }
mime_guess = { workspace = true }
url = { workspace = true }
# Align wit-bindgen with video components (0.40.x)
wit-bindgen = { version = "0.40.0", features = ["macros"] }
wit-bindgen-rt = { version = "0.40.0" }
data-encoding = { version = "2.4" }
rsa = { version = "0.9" }
sha2 = { version = "0.10" }

[features]
mock_http = ["golem-stt/mock_http"]

[package.metadata.component]
package = "golem:stt-google"

[package.metadata.component.bindings]
generate_unused_types = true

[package.metadata.component.bindings.with]
"golem:stt/languages@1.0.0" = "golem_stt::golem::stt::languages"
"golem:stt/transcription@1.0.0" = "golem_stt::golem::stt::transcription"
"golem:stt/types@1.0.0" = "golem_stt::golem::stt::types"
"golem:stt/vocabularies@1.0.0" = "golem_stt::golem::stt::vocabularies"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"golem:stt" = { path = "wit/deps/golem-stt" }

[build-dependencies]
# Pin build-time macros to video component version (0.40.x)
wit-bindgen = { version = "0.40.0" }
wit-bindgen-rt = { version = "0.40.0" }
wit-bindgen-rust-macro = { version = "0.40.0" }
