[package]
name = "golem-stt-google"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://golem.cloud"
repository = "https://github.com/golemcloud/golem-ai"
description = "Library for working with Google Speech to Text API on Golem Cloud"

[lib]
path = "src/lib.rs"

[features]
default = ["durability"]
durability = ["golem-rust/durability", "golem-stt/durability"]

[dependencies]
golem-stt = { workspace = true }

golem-rust = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
wstd = { workspace = true }
derive_more = { version = "2.0.1", features = ["from"] }
http = "=1.3.1"
url = "2.5.4"
futures-concurrency = "7.6.3"
async-lock = "3.4.0"
itertools = "0.14.0"
chrono = "0.4.41"
urlencoding = "2.1.3"
once_cell = "1.21.3"
bytes = "1.10.1"
# Cryptographic dependencies for proper JWT signing
rsa = "0.9.8"
sha2 = { version = "0.10.9", features = ["oid"] }
rand = "0.8"

[dev-dependencies]
multipart-2021 = "0.19.0"

