[package]
name = "golem-stt"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://golem.cloud"
repository = "https://github.com/golemcloud/golem-stt"
description = "WebAssembly components for working with speech-to-text APIs, with special support for Golem Cloud"

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
golem-rust = { workspace = true }
urlencoding = "2"
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { workspace = true }
# Align wit-bindgen with video components (0.40.x)
wit-bindgen = { version = "0.40.0", features = ["macros"] }
base64 = { workspace = true }
mime_guess = { workspace = true }
url = { workspace = true }
futures = { workspace = true }

[features]
default = []
durability = ["golem-rust/durability"]
mock_http = []  # Enable mock HTTP for CI without secrets
